--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,19 @@ services:
   nginx:
     image: "nginx:stable-alpine"
     ports:
-      
+      - "8000:80"
+    volumes:
+      - ./nginx/ngins.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./src:/var/www/laravel
   php:
+    build:
+      context: dockerfiles
+      dockerfile: php.dockerfile
+    volumes:
+    - ./src:/var/www/laravel
   pgsql:
+    image: postgres:15
+    ports:
+    - "5432:5432"
+    environment:
+      - env/pgsql
