--- a/env/pgsql.env
+++ b/env/pgsql.env
@@ -1,6 +1,6 @@
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
-DB_PORT=5432
-DB_DATABASE=worktop_app
-DB_USERNAME=dockerfile
-DB_PASSWORD=password
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=worktop_app
+POSTGRES_USERNAME=dockerfile
+POSTGRES_PASSWORD=password
