--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
 server {
- listen: 80;
- index index.php index.html;
- server_name localhost;
- root /var/www/laravel/public;
- location / {
-    try_files $uri $uri/ /index.php?$query_string;
+    listen 80;
+    index index.php index.html;
+    server_name localhost;
+    root /var/www/laravel/public;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
     }
     location ~ \.php$ {
         try_files $uri =404;
@@ -15,4 +15,4 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
-    }
+}
